feat(log): 实时日志回放从固定行数改为时间驱动 + 前端设置
默认回放窗口 3 小时，不足 500 行时自动向前补充。
后端：反向时间扫描算法（RandomAccessFile 逐块逆向读取 + 时间戳解析定位边界）。
前端：设置页新增 console_replay_window 配置项；SSE 端点通过 ?window= 参数透传。